--- a/LI2/latex/logica_8h.tex
+++ b/LI2/latex/logica_8h.tex
@@ -11,14 +11,16 @@ int \mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\+\_\+po
 \begin{DoxyCompactList}\small\item\em Função que verifica se a jogada é possivel. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\+\_\+terminado}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e)
 \begin{DoxyCompactList}\small\item\em Verifica se o jogo terminou. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}{tabuleiro\+\_\+ficheiro}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, char linha\mbox{[}$\,$\mbox{]})
+void \mbox{\hyperlink{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}{tabuleiro\+\_\+ficheiro}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, char $\ast$linha)
 \begin{DoxyCompactList}\small\item\em Coloca o tabuleiro e o estado do jogo num ficheiro. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\+\_\+jogada}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, int col, int lin)
 \begin{DoxyCompactList}\small\item\em Função (auxiliar) que atualiza os dados de forma a que a jogada fique realizada. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\+\_\+file\+Tab}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, F\+I\+LE $\ast$fp)
 \begin{DoxyCompactList}\small\item\em Função que imprime o tabuleiro no ficheiro criado pelo utilizador com o comando \char`\"{}gr\char`\"{}. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{logica_8h_acb7c3a1d861395fabd4db18a365738b9}{file\+\_\+pos\+Ant}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, F\+I\+LE $\ast$fp)
-\begin{DoxyCompactList}\small\item\em Função que imprime as jogadas anteriores no ficheiro criado pelo utilizador com o comando \char`\"{}gr\char`\"{}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Função que imprime as jogadas anteriores no ficheiro criado pelo utilizador com o comando \char`\"{}gr\char`\"{}. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}{ler\+\_\+ficheiro}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, char linha\mbox{[}$\,$\mbox{]})
+\begin{DoxyCompactList}\small\item\em Lê um ficheiro e atualiza o estado do jogo com o estado do jogo definido nesse ficheiro. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Descrição detalhada}
@@ -52,27 +54,27 @@ Determina se foi o jogador 1 ou 2 a jogar, e, consoante isto, coloca na array \c
 Incrementa o numero de jogadas. \end{quote}
 
 
-Definido na linha 31 do ficheiro logica.\+c.
+Definido na linha 27 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{31                                                    \{}
-\DoxyCodeLine{32     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{33     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{35     \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{36         e-\/>jogadas[jogadas].jogador1.linha = lin;}
-\DoxyCodeLine{37         e-\/>jogadas[jogadas].jogador1.coluna = col;}
-\DoxyCodeLine{38     \} \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{39         e-\/>jogadas[jogadas].jogador2.linha = lin;}
-\DoxyCodeLine{40         e-\/>jogadas[jogadas].jogador2.coluna = col;}
-\DoxyCodeLine{41     \}}
-\DoxyCodeLine{42     \textcolor{keywordflow}{if} (jog == 1)}
-\DoxyCodeLine{43         e-\/>jogador\_atual = 2;}
-\DoxyCodeLine{44     \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{45         e-\/>jogador\_atual = 1;}
-\DoxyCodeLine{47         e-\/>num\_jogadas++;}
-\DoxyCodeLine{48     \}}
-\DoxyCodeLine{49 \}}
+\DoxyCodeLine{27                                                    \{}
+\DoxyCodeLine{28     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{29     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{31     \textcolor{keywordflow}{if} (jog == 1) \{}
+\DoxyCodeLine{32         e-\/>jogadas[jogadas].jogador1.linha = lin;}
+\DoxyCodeLine{33         e-\/>jogadas[jogadas].jogador1.coluna = col;}
+\DoxyCodeLine{34     \} \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{35         e-\/>jogadas[jogadas].jogador2.linha = lin;}
+\DoxyCodeLine{36         e-\/>jogadas[jogadas].jogador2.coluna = col;}
+\DoxyCodeLine{37     \}}
+\DoxyCodeLine{38     \textcolor{keywordflow}{if} (jog == 1)}
+\DoxyCodeLine{39         e-\/>jogador\_atual = 2;}
+\DoxyCodeLine{40     \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{41         e-\/>jogador\_atual = 1;}
+\DoxyCodeLine{43         e-\/>num\_jogadas++;}
+\DoxyCodeLine{44     \}}
+\DoxyCodeLine{45 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_acb7c3a1d861395fabd4db18a365738b9}\label{logica_8h_acb7c3a1d861395fabd4db18a365738b9}} 
@@ -96,43 +98,43 @@ Função que imprime as jogadas anteriores no ficheiro criado pelo utilizador co
 Coloca jogadas anteriores no ficheiro. \end{quote}
 
 
-Definido na linha 111 do ficheiro logica.\+c.
+Definido na linha 103 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{111                                        \{}
-\DoxyCodeLine{112     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{113     \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{115     \textcolor{keywordflow}{if} (jog == 2) \{}
-\DoxyCodeLine{116         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
-\DoxyCodeLine{117             \textcolor{keywordflow}{if}(i < 10)}
-\DoxyCodeLine{118                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
-\DoxyCodeLine{119             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{120                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
-\DoxyCodeLine{121 }
-\DoxyCodeLine{122             \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
-\DoxyCodeLine{123                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{124                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{125             \}}
-\DoxyCodeLine{126             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{127                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
-\DoxyCodeLine{128             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{129         \}}
-\DoxyCodeLine{130     \}}
-\DoxyCodeLine{131 }
-\DoxyCodeLine{132     \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{133         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
-\DoxyCodeLine{134             \textcolor{keywordflow}{if} (i < 10)}
-\DoxyCodeLine{135                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
-\DoxyCodeLine{136             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{137                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
-\DoxyCodeLine{138 }
-\DoxyCodeLine{139             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{140                     \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{141             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{142         \}}
-\DoxyCodeLine{143     \}}
-\DoxyCodeLine{144 \}}
+\DoxyCodeLine{103                                        \{}
+\DoxyCodeLine{104     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{105     \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{107     \textcolor{keywordflow}{if} (jog == 2) \{}
+\DoxyCodeLine{108         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
+\DoxyCodeLine{109             \textcolor{keywordflow}{if}(i < 10)}
+\DoxyCodeLine{110                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
+\DoxyCodeLine{111             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{112                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
+\DoxyCodeLine{113 }
+\DoxyCodeLine{114             \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
+\DoxyCodeLine{115                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{116                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{117             \}}
+\DoxyCodeLine{118             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{119                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
+\DoxyCodeLine{120             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{121         \}}
+\DoxyCodeLine{122     \}}
+\DoxyCodeLine{123 }
+\DoxyCodeLine{124     \textcolor{keywordflow}{if} (jog == 1) \{}
+\DoxyCodeLine{125         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
+\DoxyCodeLine{126             \textcolor{keywordflow}{if} (i < 10)}
+\DoxyCodeLine{127                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
+\DoxyCodeLine{128             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{129                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
+\DoxyCodeLine{130 }
+\DoxyCodeLine{131             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{132                     \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{133             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{134         \}}
+\DoxyCodeLine{135     \}}
+\DoxyCodeLine{136 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}\label{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}} 
@@ -156,19 +158,20 @@ Função que imprime o tabuleiro no ficheiro criado pelo utilizador com o comand
 Imprime o conteudo do tabuleiro, imprimindo \textquotesingle{}$\ast$\textquotesingle{} no caso de a Peça ser \char`\"{}\+B\+R\+A\+N\+C\+A\char`\"{},\textquotesingle{}\#\textquotesingle{} no caso de a peça ser \char`\"{}\+P\+R\+E\+T\+A\char`\"{}, e \textquotesingle{}.\textquotesingle{} no caso de ser \char`\"{}\+V\+A\+Z\+I\+O\char`\"{}. \end{quote}
 
 
-Definido na linha 99 do ficheiro logica.\+c.
+Definido na linha 90 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{99                                            \{}
-\DoxyCodeLine{101     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
-\DoxyCodeLine{102         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
-\DoxyCodeLine{103             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
-\DoxyCodeLine{104             fprintf(fp, \textcolor{stringliteral}{"\%c"}, peca);}
-\DoxyCodeLine{105         \}}
-\DoxyCodeLine{106         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{107     \}}
-\DoxyCodeLine{108 \}}
+\DoxyCodeLine{90                                            \{}
+\DoxyCodeLine{92     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
+\DoxyCodeLine{93         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
+\DoxyCodeLine{94             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
+\DoxyCodeLine{95             fprintf(fp, \textcolor{stringliteral}{"\%c"}, peca);}
+\DoxyCodeLine{96         \}}
+\DoxyCodeLine{97         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{98     \}}
+\DoxyCodeLine{99     fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{100 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}\label{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}} 
@@ -193,19 +196,19 @@ Função que verifica se a jogada é possivel.
 \end{DoxyReturn}
 
 
-Definido na linha 52 do ficheiro logica.\+c.
+Definido na linha 48 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{52                                               \{}
-\DoxyCodeLine{53     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
-\DoxyCodeLine{54     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
-\DoxyCodeLine{55     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
-\DoxyCodeLine{56 }
-\DoxyCodeLine{57         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{58     \}}
-\DoxyCodeLine{59     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{60 \}}
+\DoxyCodeLine{48                                               \{}
+\DoxyCodeLine{49     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
+\DoxyCodeLine{50     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
+\DoxyCodeLine{51     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
+\DoxyCodeLine{52 }
+\DoxyCodeLine{53         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{54     \}}
+\DoxyCodeLine{55     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{56 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}\label{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}} 
@@ -240,29 +243,24 @@ Coloca uma peça preta na casa anterior da peça branca. \end{quote}
 Coloca a nova posição da peça branca como posição anterior para ser usada futuramente. \end{quote}
 
 
-Definido na linha 7 do ficheiro logica.\+c.
+Definido na linha 8 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{7                                    \{}
-\DoxyCodeLine{8     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
-\DoxyCodeLine{9     \textcolor{keywordtype}{int} col = c.coluna;}
-\DoxyCodeLine{10     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
-\DoxyCodeLine{12         e-\/>tab[lin][col] = BRANCA;}
-\DoxyCodeLine{14         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
-\DoxyCodeLine{16         e-\/>ultima\_jogada.coluna = col;}
-\DoxyCodeLine{17         e-\/>ultima\_jogada.linha = lin;}
-\DoxyCodeLine{18         \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\_jogada}}(e, col, lin);}
-\DoxyCodeLine{19         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{20     \}}
-\DoxyCodeLine{21     \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{22         \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 0)\{}
-\DoxyCodeLine{23             printf(\textcolor{stringliteral}{"Jogada Invalida.\(\backslash\)n"});}
-\DoxyCodeLine{24             \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{25         \}}
-\DoxyCodeLine{26     \}}
-\DoxyCodeLine{27     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{28 \}}
+\DoxyCodeLine{8                                    \{}
+\DoxyCodeLine{9     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
+\DoxyCodeLine{10     \textcolor{keywordtype}{int} col = c.coluna;}
+\DoxyCodeLine{11     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
+\DoxyCodeLine{13         e-\/>tab[lin][col] = BRANCA;}
+\DoxyCodeLine{15         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
+\DoxyCodeLine{17         e-\/>ultima\_jogada.coluna = col;}
+\DoxyCodeLine{18         e-\/>ultima\_jogada.linha = lin;}
+\DoxyCodeLine{19         \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\_jogada}}(e, col, lin);}
+\DoxyCodeLine{20         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{21     \}}
+\DoxyCodeLine{22     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{23     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{24 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}\label{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}} 
@@ -285,29 +283,87 @@ Verifica se o jogo terminou.
 \end{DoxyReturn}
 
 
-Definido na linha 63 do ficheiro logica.\+c.
+Definido na linha 59 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{63                                \{}
-\DoxyCodeLine{64     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{65     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
-\DoxyCodeLine{66         r = 1;}
-\DoxyCodeLine{67     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
-\DoxyCodeLine{68             r = 2;}
-\DoxyCodeLine{69         \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 32)}
-\DoxyCodeLine{70                 r = 3;}
-\DoxyCodeLine{71     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{72         r = 0;}
-\DoxyCodeLine{73     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{74 \}}
+\DoxyCodeLine{59                                \{}
+\DoxyCodeLine{60     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{61     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
+\DoxyCodeLine{62         r = 1;}
+\DoxyCodeLine{63     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
+\DoxyCodeLine{64             r = 2;}
+\DoxyCodeLine{65     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 32)}
+\DoxyCodeLine{66                 r = 3;}
+\DoxyCodeLine{67     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{68         r = 0;}
+\DoxyCodeLine{69     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{70 \}}
 
 \end{DoxyCode}
-\mbox{\Hypertarget{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}\label{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}} 
+\mbox{\Hypertarget{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}\label{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}} 
+\index{logica.h@{logica.h}!ler\_ficheiro@{ler\_ficheiro}}
+\index{ler\_ficheiro@{ler\_ficheiro}!logica.h@{logica.h}}
+\doxysubsubsection{\texorpdfstring{ler\_ficheiro()}{ler\_ficheiro()}}
+{\footnotesize\ttfamily int ler\+\_\+ficheiro (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$}]{e,  }\item[{char}]{linha\mbox{[}$\,$\mbox{]} }\end{DoxyParamCaption})}
+
+
+
+Lê um ficheiro e atualiza o estado do jogo com o estado do jogo definido nesse ficheiro. 
+
+
+\begin{DoxyParams}{Parâmetros}
+{\em e} & Estado atual do jogo. \\
+\hline
+{\em linha} & Linha obtida pela função \char`\"{}fgets()\char`\"{} no interpretador. \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Retorna}
+1 caso consiga ler o ficheiro, 0 caso nao consiga. 
+\end{DoxyReturn}
+\begin{quote}
+Copia o nome do ficheiro presente na string \char`\"{}linha\char`\"{} e coloca na string \char`\"{}comando\char`\"{}, e concatena \char`\"{}.\+txt\char`\"{} no final. \end{quote}
+
+
+\begin{quote}
+Abre o ficheiro pedido pelo utilizador e lê o seu conteúdo. \end{quote}
+
+
+Definido na linha 138 do ficheiro logica.\+c.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{138                                             \{}
+\DoxyCodeLine{139 }
+\DoxyCodeLine{140     FILE *fp;}
+\DoxyCodeLine{141     \textcolor{keywordtype}{char} lin\_fich [BUF\_SIZE], *comando, *cord;}
+\DoxyCodeLine{142     \textcolor{keywordtype}{int} k = 0;}
+\DoxyCodeLine{143     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{145     comando = strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{146     comando = strtok (NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{147     strcat(comando, \textcolor{stringliteral}{".txt"});}
+\DoxyCodeLine{149     \textcolor{comment}{//A função "access" retorna -\/1 caso nao encontre o ficheiro.}}
+\DoxyCodeLine{150     \textcolor{keywordflow}{if} (access(comando, F\_OK) != -\/1) \{}
+\DoxyCodeLine{151         fp = fopen(comando, \textcolor{stringliteral}{"r"});}
+\DoxyCodeLine{152         \textcolor{keywordflow}{while} (fgets(lin\_fich, BUF\_SIZE, fp) != NULL) \{}
+\DoxyCodeLine{153             \mbox{\hyperlink{dados_8h_a99f70b4c2f315652b02f7a8c874cb2e4}{set\_casa}}(e, lin\_fich, k);}
+\DoxyCodeLine{154             k++;}
+\DoxyCodeLine{155         \}}
+\DoxyCodeLine{156         \mbox{\hyperlink{dados_8h_a5543c8b43313c6c2f6483629fd13a3d3}{set\_estado}}(e, lin\_fich);}
+\DoxyCodeLine{157         fclose(fp);}
+\DoxyCodeLine{158         r = 1;}
+\DoxyCodeLine{159     \}}
+\DoxyCodeLine{160     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{161         r = 0;}
+\DoxyCodeLine{162     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{163 \}}
+
+\end{DoxyCode}
+\mbox{\Hypertarget{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}\label{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}} 
 \index{logica.h@{logica.h}!tabuleiro\_ficheiro@{tabuleiro\_ficheiro}}
 \index{tabuleiro\_ficheiro@{tabuleiro\_ficheiro}!logica.h@{logica.h}}
 \doxysubsubsection{\texorpdfstring{tabuleiro\_ficheiro()}{tabuleiro\_ficheiro()}}
-{\footnotesize\ttfamily void tabuleiro\+\_\+ficheiro (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$}]{e,  }\item[{char}]{linha\mbox{[}$\,$\mbox{]} }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void tabuleiro\+\_\+ficheiro (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$}]{e,  }\item[{char $\ast$}]{linha }\end{DoxyParamCaption})}
 
 
 
@@ -328,27 +384,22 @@ Copia o nome do ficheiro presente na string \char`\"{}linha\char`\"{} e coloca n
 Cria o ficheiro com o nome pedido pelo utilizador, ou abre-\/o, caso este ja exista. \end{quote}
 
 
-Definido na linha 77 do ficheiro logica.\+c.
+Definido na linha 73 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{77                                                  \{}
-\DoxyCodeLine{78     \textcolor{keywordtype}{int} j = 0;}
-\DoxyCodeLine{79     \textcolor{keywordtype}{char} item;}
-\DoxyCodeLine{80     \textcolor{keywordtype}{char} comando[BUF\_SIZE];}
-\DoxyCodeLine{81 }
-\DoxyCodeLine{83     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 2; linha[i] != \textcolor{charliteral}{'\(\backslash\)n'}; i++) \{}
-\DoxyCodeLine{84         comando[j] = linha[i];}
-\DoxyCodeLine{85         j++;}
-\DoxyCodeLine{86     \}}
-\DoxyCodeLine{87     comando[j] = \textcolor{charliteral}{'\(\backslash\)0'};}
-\DoxyCodeLine{88     strcat(comando, \textcolor{stringliteral}{".txt"});}
-\DoxyCodeLine{89 }
-\DoxyCodeLine{91     FILE *fp;}
-\DoxyCodeLine{92     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
-\DoxyCodeLine{93     \mbox{\hyperlink{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
-\DoxyCodeLine{94     \mbox{\hyperlink{logica_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
-\DoxyCodeLine{95     fclose(fp);}
-\DoxyCodeLine{96 \}}
+\DoxyCodeLine{73                                                 \{}
+\DoxyCodeLine{74     \textcolor{keywordtype}{char} *comando;}
+\DoxyCodeLine{75     \textcolor{keywordtype}{int} j = 0;}
+\DoxyCodeLine{77     comando = strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{78     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{79     strcat(comando, \textcolor{stringliteral}{".txt"});}
+\DoxyCodeLine{80 }
+\DoxyCodeLine{82     FILE *fp;}
+\DoxyCodeLine{83     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
+\DoxyCodeLine{84     \mbox{\hyperlink{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
+\DoxyCodeLine{85     \mbox{\hyperlink{logica_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
+\DoxyCodeLine{86     fclose(fp);}
+\DoxyCodeLine{87 \}}
 
 \end{DoxyCode}
