--- a/LI2/latex/interface_8h.tex
+++ b/LI2/latex/interface_8h.tex
@@ -40,53 +40,53 @@ Usa a funcao \char`\"{}jogo\+\_\+terminado\char`\"{} para verificar se tem de co
 Verifica qual é o comando do utilizador, tendo ações diferentes para cada um destes comandos. \end{quote}
 
 
-Definido na linha 33 do ficheiro interface.\+c.
+Definido na linha 32 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{33                              \{}
-\DoxyCodeLine{34     \textcolor{keywordtype}{char} linha[BUF\_SIZE], comando [BUF\_SIZE];}
-\DoxyCodeLine{35     \textcolor{keywordtype}{char} col[2], lin[2];}
-\DoxyCodeLine{36 }
-\DoxyCodeLine{38     \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 0) \{}
-\DoxyCodeLine{39         \mbox{\hyperlink{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}{mostrar\_tabuleiro}}(e);}
-\DoxyCodeLine{41         \textcolor{keywordflow}{if} (fgets(linha, BUF\_SIZE, stdin) == NULL)}
-\DoxyCodeLine{42             \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{43         \textcolor{keywordflow}{else}}
-\DoxyCodeLine{44             \textcolor{comment}{//Comando "Q", para sair do jogo.}}
-\DoxyCodeLine{45             \textcolor{keywordflow}{if} (strlen(linha) == 2 \&\& strncmp(linha, \textcolor{stringliteral}{"Q"}, 1) == 0) \{}
-\DoxyCodeLine{46                 printf(\textcolor{stringliteral}{"Saiu do jogo. \(\backslash\)n"});}
-\DoxyCodeLine{47                 \textcolor{keywordflow}{break};}
-\DoxyCodeLine{48             \}}
-\DoxyCodeLine{49             \textcolor{comment}{//Comando "gr", para guardar o estado do jogo.}}
-\DoxyCodeLine{50             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"gr"}, 2) == 0) \{}
-\DoxyCodeLine{51                 \mbox{\hyperlink{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}{tabuleiro\_ficheiro}}(e, linha);}
-\DoxyCodeLine{52                 printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo gravado.\(\backslash\)n"});}
-\DoxyCodeLine{53             \}}
-\DoxyCodeLine{54             \textcolor{comment}{//Comando "ler" para ler o estado do jogo num dado ficheiro.}}
-\DoxyCodeLine{55             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"ler"}, 3) == 0) \{}
-\DoxyCodeLine{56                \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}{ler\_ficheiro}}(e,linha) == 1) \{}
-\DoxyCodeLine{57                     printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo atualizado.\(\backslash\)n"});}
-\DoxyCodeLine{58                 \}}
-\DoxyCodeLine{59                \textcolor{keywordflow}{else}}
-\DoxyCodeLine{60                    printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Nao foi possivel encontrar esse ficheiro.\(\backslash\)n"});}
-\DoxyCodeLine{61             \}}
-\DoxyCodeLine{62             \textcolor{comment}{//Caso nao se pretenda efetuar nenhum comando mas sim uma jogada.}}
-\DoxyCodeLine{63         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
-\DoxyCodeLine{64             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
-\DoxyCodeLine{65             \textcolor{keywordflow}{if}(\mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e,coord) == 0)}
-\DoxyCodeLine{66                 printf(\textcolor{stringliteral}{"Jogada Invalida. \(\backslash\)n"});}
-\DoxyCodeLine{67         \}}
-\DoxyCodeLine{68     \}}
-\DoxyCodeLine{69     \textcolor{comment}{//Verifica qual dos jogadores congratular no final do jogo.}}
-\DoxyCodeLine{70     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1)}
-\DoxyCodeLine{71         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
-\DoxyCodeLine{72     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2)}
-\DoxyCodeLine{73         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
-\DoxyCodeLine{74     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3)}
-\DoxyCodeLine{75         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
-\DoxyCodeLine{76     \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{77 \}}
+\DoxyCodeLine{32                              \{}
+\DoxyCodeLine{33     \textcolor{keywordtype}{char} linha[BUF\_SIZE];}
+\DoxyCodeLine{34     \textcolor{keywordtype}{char} col[2], lin[2];}
+\DoxyCodeLine{35 }
+\DoxyCodeLine{37     \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 0) \{}
+\DoxyCodeLine{38         \mbox{\hyperlink{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}{mostrar\_tabuleiro}}(e);}
+\DoxyCodeLine{40         \textcolor{keywordflow}{if} (fgets(linha, BUF\_SIZE, stdin) == NULL)}
+\DoxyCodeLine{41             \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{42         \textcolor{keywordflow}{else}}
+\DoxyCodeLine{43             \textcolor{comment}{//Comando "Q", para sair do jogo.}}
+\DoxyCodeLine{44             \textcolor{keywordflow}{if} (strlen(linha) == 2 \&\& strncmp(linha, \textcolor{stringliteral}{"Q"}, 1) == 0) \{}
+\DoxyCodeLine{45                 printf(\textcolor{stringliteral}{"Saiu do jogo. \(\backslash\)n"});}
+\DoxyCodeLine{46                 \textcolor{keywordflow}{break};}
+\DoxyCodeLine{47             \}}
+\DoxyCodeLine{48             \textcolor{comment}{//Comando "gr", para guardar o estado do jogo.}}
+\DoxyCodeLine{49             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"gr"}, 2) == 0) \{}
+\DoxyCodeLine{50                 \mbox{\hyperlink{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}{tabuleiro\_ficheiro}}(e, linha);}
+\DoxyCodeLine{51                 printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo gravado.\(\backslash\)n"});}
+\DoxyCodeLine{52             \}}
+\DoxyCodeLine{53             \textcolor{comment}{//Comando "ler" para ler o estado do jogo num dado ficheiro.}}
+\DoxyCodeLine{54             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"ler"}, 3) == 0) \{}
+\DoxyCodeLine{55                \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}{ler\_ficheiro}}(e,linha) == 1) \{}
+\DoxyCodeLine{56                     printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo atualizado.\(\backslash\)n"});}
+\DoxyCodeLine{57                 \}}
+\DoxyCodeLine{58                \textcolor{keywordflow}{else}}
+\DoxyCodeLine{59                    printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Nao foi possivel encontrar esse ficheiro.\(\backslash\)n"});}
+\DoxyCodeLine{60             \}}
+\DoxyCodeLine{61             \textcolor{comment}{//Caso nao se pretenda efetuar nenhum comando mas sim uma jogada.}}
+\DoxyCodeLine{62         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
+\DoxyCodeLine{63             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
+\DoxyCodeLine{64             \textcolor{keywordflow}{if}(\mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e,coord) == 0)}
+\DoxyCodeLine{65                 printf(\textcolor{stringliteral}{"Jogada Invalida. \(\backslash\)n"});}
+\DoxyCodeLine{66         \}}
+\DoxyCodeLine{67     \}}
+\DoxyCodeLine{68     \textcolor{comment}{//Verifica qual dos jogadores congratular no final do jogo.}}
+\DoxyCodeLine{69     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1)}
+\DoxyCodeLine{70         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
+\DoxyCodeLine{71     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2)}
+\DoxyCodeLine{72         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
+\DoxyCodeLine{73     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3)}
+\DoxyCodeLine{74         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
+\DoxyCodeLine{75     \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{76 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}\label{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}} 
@@ -111,28 +111,27 @@ Definido na linha 7 do ficheiro interface.\+c.
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{7                                   \{}
-\DoxyCodeLine{8     \textcolor{keywordtype}{char} item;}
-\DoxyCodeLine{9     \textcolor{keywordtype}{int} num = 8;}
-\DoxyCodeLine{10 }
-\DoxyCodeLine{11     \textcolor{comment}{//Imprime as letras no topo do tabuleiro.}}
-\DoxyCodeLine{12     printf(\textcolor{stringliteral}{"   "});}
-\DoxyCodeLine{13     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{char} c = \textcolor{charliteral}{'a'}; c < \textcolor{charliteral}{'i'}; c++)}
-\DoxyCodeLine{14         printf(\textcolor{stringliteral}{"\%c  "}, c);}
-\DoxyCodeLine{15     printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{16     \textcolor{comment}{/*}}
-\DoxyCodeLine{17 \textcolor{comment}{    Imprime o conteudo do tabuleiro, imprimindo '*' no caso de a Peça ser "BRANCA",}}
-\DoxyCodeLine{18 \textcolor{comment}{    '\#' no caso de a peça ser "PRETA", e '.' no caso de ser "VAZIO".}}
-\DoxyCodeLine{19 \textcolor{comment}{    */}}
-\DoxyCodeLine{20     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
-\DoxyCodeLine{21         printf(\textcolor{stringliteral}{"\%d  "}, num);}
-\DoxyCodeLine{22         num-\/-\/;}
-\DoxyCodeLine{23         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
-\DoxyCodeLine{24             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
-\DoxyCodeLine{25             printf(\textcolor{stringliteral}{"\%c  "}, peca);}
-\DoxyCodeLine{26         \}}
-\DoxyCodeLine{27         printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{28     \}}
-\DoxyCodeLine{29     printf(\textcolor{stringliteral}{"\#(\%d) JOG: \%d => "}, \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e) + 1, \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e));}
-\DoxyCodeLine{30 \}}
+\DoxyCodeLine{8     \textcolor{keywordtype}{int} num = 8;}
+\DoxyCodeLine{9 }
+\DoxyCodeLine{10     \textcolor{comment}{//Imprime as letras no topo do tabuleiro.}}
+\DoxyCodeLine{11     printf(\textcolor{stringliteral}{"   "});}
+\DoxyCodeLine{12     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{char} c = \textcolor{charliteral}{'a'}; c < \textcolor{charliteral}{'i'}; c++)}
+\DoxyCodeLine{13         printf(\textcolor{stringliteral}{"\%c  "}, c);}
+\DoxyCodeLine{14     printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{15     \textcolor{comment}{/*}}
+\DoxyCodeLine{16 \textcolor{comment}{    Imprime o conteudo do tabuleiro, imprimindo '*' no caso de a Peça ser "BRANCA",}}
+\DoxyCodeLine{17 \textcolor{comment}{    '\#' no caso de a peça ser "PRETA", e '.' no caso de ser "VAZIO".}}
+\DoxyCodeLine{18 \textcolor{comment}{    */}}
+\DoxyCodeLine{19     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
+\DoxyCodeLine{20         printf(\textcolor{stringliteral}{"\%d  "}, num);}
+\DoxyCodeLine{21         num-\/-\/;}
+\DoxyCodeLine{22         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
+\DoxyCodeLine{23             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
+\DoxyCodeLine{24             printf(\textcolor{stringliteral}{"\%c  "}, peca);}
+\DoxyCodeLine{25         \}}
+\DoxyCodeLine{26         printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{27     \}}
+\DoxyCodeLine{28     printf(\textcolor{stringliteral}{"\#(\%d) JOG: \%d => "}, \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e) + 1, \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e));}
+\DoxyCodeLine{29 \}}
 
 \end{DoxyCode}
